# iot-wifi-setup

./: .gitmodules  CMakeLists.txt  FindNetworkManager.cmake
include/: callbacks.cpp  callbacks.h  log.h  networkmanager.cpp  networkmanager.h  networksignals.h  nm_private_data.h  nm_signal_handlers.h  nm_utils.h  signals.h  utilities.cpp  utilities.h  wifi_setup.cpp  wifi_setup.h  wifinetwork.cpp  wifinetwork.h
